--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
-    "react-scroll-up-button": "^1.6.4",
-    "redux": "^4.0.4"
+    "react-scroll-up-button": "^1.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
